NetBSD Problem Report #43670
From njoly@lanfeust.sis.pasteur.fr Mon Jul 26 13:33:02 2010
Return-Path: <njoly@lanfeust.sis.pasteur.fr>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
by www.NetBSD.org (Postfix) with ESMTP id C4F4563BAE5
for <gnats-bugs@gnats.NetBSD.org>; Mon, 26 Jul 2010 13:33:02 +0000 (UTC)
Message-Id: <20100726133259.8072DDC9BB@lanfeust.sis.pasteur.fr>
Date: Mon, 26 Jul 2010 15:32:59 +0200 (CEST)
From: njoly@pasteur.fr
Reply-To: njoly@pasteur.fr
To: gnats-bugs@gnats.NetBSD.org
Subject: msdos claims support for filenames longer than {NAME_MAX}, but fails
X-Send-Pr-Version: 3.95
>Number: 43670
>Category: kern
>Synopsis: msdosfs claims support for filenames longer than {NAME_MAX}, but fails
>Confidential: no
>Severity: non-critical
>Priority: low
>Responsible: hannken
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Mon Jul 26 13:35:01 +0000 2010
>Closed-Date: Sat Jul 23 08:03:48 +0000 2011
>Last-Modified: Sat Jul 23 08:03:48 +0000 2011
>Originator: Nicolas Joly
>Release: NetBSD 5.99.37
>Organization:
Insitut Pasteur
>Environment:
System: NetBSD lanfeust.sis.pasteur.fr 5.99.37 NetBSD 5.99.37 (LANFEUST) #5: Mon Jul 26 12:17:38 CEST 2010 njoly@lanfeust.sis.pasteur.fr:/local/src/NetBSD/obj.amd64/sys/arch/amd64/compile/LANFEUST amd64
Architecture: x86_64
Machine: amd64
>Description:
While msdosfs claims to support filenames longer than {NAME_MAX}
(pathconf(2) _PC_NO_TRUNC returns 0), it fails with ENAMETOOLONG
(at least with default mount flags).
>How-To-Repeat:
run tests
>Fix:
>Release-Note:
>Audit-Trail:
From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/43670 CVS commit: src
Date: Wed, 20 Jul 2011 11:52:00 +0000
Module Name: src
Committed By: hannken
Date: Wed Jul 20 11:52:00 UTC 2011
Modified Files:
src/sys/fs/msdosfs: msdosfs_vnops.c
src/tests/fs/vfs: t_vnops.c
Log Message:
Even though msdosfs never truncates file names it advertises _PC_NO_TRUNC
as zero. Make it advertise one (no_trunc == true).
Names longer than NAME_MAX (255) will never pass namei() btw.
Fixes PR #43670 (msdosfs claims support for filenames longer than {NAME_MAX},
but fails)
To generate a diff of this commit:
cvs rdiff -u -r1.77 -r1.78 src/sys/fs/msdosfs/msdosfs_vnops.c
cvs rdiff -u -r1.24 -r1.25 src/tests/fs/vfs/t_vnops.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
Responsible-Changed-From-To: kern-bug-people->hannken
Responsible-Changed-By: hannken@NetBSD.org
Responsible-Changed-When: Sat, 23 Jul 2011 08:03:48 +0000
Responsible-Changed-Why:
Take.
State-Changed-From-To: open->closed
State-Changed-By: hannken@NetBSD.org
State-Changed-When: Sat, 23 Jul 2011 08:03:48 +0000
State-Changed-Why:
Fixed with fs/msdosfs/msdosfs_vnops.c Rev. 1.78
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.